Mobile Responsive Media Query Completed

--- a/index.html
+++ b/index.html
@@ -16,12 +16,31 @@
     <header>
       <!-- Navigation menu -->
       <nav>
-        <div class="nav-items">
-          <a href="#">Home</a>
-          <a href="#">Clubs</a>
-          <a href="#">World Cup 2023</a>
-          <a href="#">Upcoming Matches</a>
-          <a href="#">Contacts</a>
+        <div class="nav-menu">
+          <ul>
+            <li class="hamburger-menu">
+              <a href="#"><i class="fa-solid fa-bars"></i></a>
+            </li>
+            <li>
+              <ul class="nav-items">
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">Clubs</a>
+                </li>
+                <li>
+                  <a href="#">World Cup 2023</a>
+                </li>
+                <li>
+                  <a href="#">Upcoming Matches</a>
+                </li>
+                <li>
+                  <a href="#">Contacts</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
         <div class="login">
           <a href="#" class="link-button"
@@ -146,10 +165,12 @@
             temporibus dicta beatae aut sint quae ullam culpa iste repudiandae
             facilis, incidunt veritatis accusamus, officia necessitatibus.
           </p>
-          <a href="#" class="link-button">Watch Now</a>
+          <a href="#" class="link-button"
+            >Watch Now <i class="fa-solid fa-arrow-right"></i
+          ></a>
         </div>
 
-        <div class="match">
+        <div class="hightlights-image">
           <img src="images/match.png" alt="Match" />
         </div>
       </div>
