Media Query to Tablet Added

--- a/index.html
+++ b/index.html
@@ -152,6 +152,33 @@
             quasi minima saepe! Libero consectetur omnis doloribus.
           </p>
         </div>
+
+        <div class="player-10 player-box">
+          <img src="images/players/player-10.png" alt="player 10" />
+          <h3>Neymar Jr.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
+            quasi minima saepe! Libero consectetur omnis doloribus.
+          </p>
+        </div>
+
+        <div class="player-11 player-box">
+          <img src="images/players/player-11.png" alt="player 11" />
+          <h3>Neymar Jr.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
+            quasi minima saepe! Libero consectetur omnis doloribus.
+          </p>
+        </div>
+
+        <div class="player-12 player-box">
+          <img src="images/players/player-12.png" alt="player 12" />
+          <h3>Neymar Jr.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
+            quasi minima saepe! Libero consectetur omnis doloribus.
+          </p>
+        </div>
       </div>
     </section>
 
