--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Header Section -->
     <header>
-      <!-- Navigation menu -->
       <nav>
+        <!-- Navigation menu -->
         <div class="nav-menu">
           <ul>
             <li class="hamburger-menu">
@@ -42,6 +43,8 @@
             </li>
           </ul>
         </div>
+
+        <!-- Login Button -->
         <div class="login">
           <a href="#" class="link-button"
             ><i class="fa-solid fa-arrow-right-to-bracket"></i> Login</a
@@ -50,6 +53,7 @@
       </nav>
       <!-- Main Banner -->
       <main>
+        <!-- Banner Text -->
         <div class="hero-text">
           <h1>
             Conmebol
@@ -58,10 +62,14 @@
             <br />
             2021
           </h1>
+
+          <!-- Link Button -->
           <a href="" class="link-button"
             >Watch Live <i class="fa-solid fa-arrow-right"></i
           ></a>
         </div>
+
+        <!-- Banner Image -->
         <div class="banner">
           <img src="images/banner.png" alt="Banner" />
         </div>
@@ -71,6 +79,7 @@
     <!-- Players Section -->
     <section>
       <div class="all-players">
+        <!-- Player 1 -->
         <div class="player-1 player-box">
           <img src="images/players/player-1.png" alt="player 1" />
           <h3>Neymar Jr.</h3>
@@ -80,6 +89,7 @@
           </p>
         </div>
 
+        <!-- Player 2 -->
         <div class="player-2 player-box">
           <img src="images/players/player-2.png" alt="player 1" />
           <h3>Lionel Messi</h3>
@@ -89,6 +99,7 @@
           </p>
         </div>
 
+        <!-- Player 3 -->
         <div class="player-3 player-box">
           <img src="images/players/player-3.png" alt="player 3" />
           <h3>Cristiano Ronaldo</h3>
@@ -99,84 +110,95 @@
           </p>
         </div>
 
+        <!-- Player 4 -->
         <div class="player-4 player-box">
           <img src="images/players/player-4.png" alt="player 4" />
-          <h3>Neymar Jr.</h3>
+          <h3>Paulo Dybala</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Paulo Exequiel Dybala is an Argentine professional footballer who
+            plays as a forward for Serie A club Juventus.
           </p>
         </div>
 
+        <!-- Player 5 -->
         <div class="player-5 player-box">
           <img src="images/players/player-5.png" alt="player 5" />
-          <h3>Neymar Jr.</h3>
+          <h3>Mesut Özil</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Mesut Özil is a German professional footballer who plays as an
+            attacking midfielder and is the captain of Turkish Süper Lig club
+            Fenerbahçe.
           </p>
         </div>
 
+        <!-- Player 6 -->
         <div class="player-6 player-box">
           <img src="images/players/player-6.png" alt="player 6" />
-          <h3>Neymar Jr.</h3>
+          <h3>Mauro Icardi</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Mauro Emanuel Icardi is an Argentine professional footballer who
+            plays as a striker for Ligue 1 club Paris Saint-Germain.
           </p>
         </div>
 
+        <!-- Player 7 -->
         <div class="player-7 player-box">
           <img src="images/players/player-7.png" alt="player 7" />
-          <h3>Neymar Jr.</h3>
+          <h3>Ángel Di María</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Ángel Fabián Di María is an Argentine professional footballer who
+            plays for Ligue 1 club Paris Saint-Germain.
           </p>
         </div>
 
+        <!-- Player 8 -->
         <div class="player-8 player-box">
           <img src="images/players/player-8.png" alt="player 8" />
-          <h3>Neymar Jr.</h3>
+          <h3>Kylian Mbappé</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Kylian Mbappé Lottin is a French professional footballer who plays
+            as a forward for Ligue 1 club Paris Saint-Germain.
           </p>
         </div>
 
+        <!-- Player 9 -->
         <div class="player-9 player-box">
           <img src="images/players/player-9.png" alt="player 9" />
-          <h3>Neymar Jr.</h3>
+          <h3>Mohamed Salah</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+            footballer who plays as a forward for Premier League club Liverpool.
           </p>
         </div>
 
+        <!-- Player 10 -->
         <div class="player-10 player-box">
           <img src="images/players/player-10.png" alt="player 10" />
-          <h3>Neymar Jr.</h3>
+          <h3>Harry Kane</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Harry Edward Kane MBE is an English professional footballer who
+            plays as a striker for Premier League club Tottenham Hotspur.
           </p>
         </div>
 
+        <!-- Player 11 -->
         <div class="player-11 player-box">
           <img src="images/players/player-11.png" alt="player 11" />
-          <h3>Neymar Jr.</h3>
+          <h3>Kevin De Bruyne</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Kevin De Bruyne is a Belgian professional footballer who plays as a
+            midfielder for Premier League club Manchester City.
           </p>
         </div>
 
+        <!-- Player 12 -->
         <div class="player-12 player-box">
           <img src="images/players/player-12.png" alt="player 12" />
-          <h3>Neymar Jr.</h3>
+          <h3>Philippe Coutinho</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odio
-            quasi minima saepe! Libero consectetur omnis doloribus.
+            Philippe Coutinho Correia is a Brazilian professional footballer who
+            plays as an attacking midfielder or winger for Premier League club
+            Aston Villa.
           </p>
         </div>
       </div>
@@ -205,15 +227,20 @@
 
     <!-- Footer -->
     <footer>
+      <!-- Footer Logo -->
       <div class="footer-logo">
         <img src="images/Logo.png" alt="Logo" />
       </div>
+
+      <!-- Social Media Links -->
       <div class="social-links">
         <a href="#"><img src="images/Social Icons/Instagram.png" alt="" /></a>
         <a href="#"><img src="images/Social Icons/Dribbble.png" alt="" /></a>
         <a href="#"><img src="images/Social Icons/Twitter.png" alt="" /></a>
         <a href="#"><img src="images/Social Icons/Youtube.png" alt="" /></a>
       </div>
+
+      <!-- Copyright -->
       <div class="copy">
         <h4>Copyright &copy; 2022 Football</h4>
       </div>
